--- a/mail/evolution/Makefile
+++ b/mail/evolution/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.88 2005/08/21 11:34:37 jmmv Exp $
+# $NetBSD: Makefile,v 1.89 2005/08/21 20:53:34 jmmv Exp $
 
 DISTNAME=		evolution-2.2.3
+PKGREVISION=		1
 CATEGORIES=		mail time gnome
 MASTER_SITES=		${MASTER_SITE_GNOME:=sources/evolution/2.2/}
 EXTRACT_SUFX=		.tar.bz2
