--- a/multimedia/mencoder/Makefile
+++ b/multimedia/mencoder/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.20 2005/06/01 18:45:46 jmmv Exp $
+# $NetBSD: Makefile,v 1.21 2005/06/17 03:50:23 jlam Exp $
 
 PKGNAME=	mencoder-${MPLAYER_PKG_VERSION}
+PKGREVISION=	1
 
 COMMENT=	Simple movie encoder for MPlayer-playable movies
 
