--- a/multimedia/mplayer/Makefile
+++ b/multimedia/mplayer/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.18 2005/06/01 18:45:46 jmmv Exp $
+# $NetBSD: Makefile,v 1.19 2005/06/17 03:50:23 jlam Exp $
 
 PKGNAME=	mplayer-${MPLAYER_PKG_VERSION}
-PKGREVISION=	1
+PKGREVISION=	2
 
 COMMENT=	Software-only MPEG-1/2/4 video decoder
 
