--- a/security/amavisd-new/Makefile
+++ b/security/amavisd-new/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.12 2005/08/22 09:47:30 cube Exp $
+# $NetBSD: Makefile,v 1.13 2005/08/23 11:48:50 rillig Exp $
 
 DISTNAME=	amavisd-new-${VERSION}${PATCHLEVEL}
 PKGNAME=	amavisd-new-${VERSION}${PATCHLEVEL:S/-//}
@@ -8,7 +8,7 @@ MASTER_SITES=	http://www.ijs.si/software/amavisd/ \
 		http://ftp.cfu.net/pub/amavisd-new/ \
 		ftp://ftp.cfu.net/pub/amavisd-new/
 
-VERSION=	2.3.1
+VERSION=	2.3.3
 PATCHLEVEL=	# empty
 
 MAINTAINER=	jdunn@aquezada.com
