--- a/chat/silc-server/Makefile
+++ b/chat/silc-server/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.40 2005/06/19 01:22:17 salo Exp $
+# $NetBSD: Makefile,v 1.41 2005/08/23 11:48:47 rillig Exp $
 #
 
 DISTNAME=		silc-server-1.0
+PKGREVISION=		1
 CATEGORIES=		chat security
 MASTER_SITES=		http://www.silcnet.org/download/server/sources/ \
 			ftp://ftp.silcnet.org/silc/server/sources/ \
