--- a/www/firefox-gtk1/Makefile
+++ b/www/firefox-gtk1/Makefile
@@ -1,9 +1,7 @@
-# $NetBSD: Makefile,v 1.3 2005/09/08 22:03:45 abs Exp $
+# $NetBSD: Makefile,v 1.4 2005/09/17 02:35:19 jlam Exp $
 
 MOZILLA=	firefox-gtk1
-PKGREVISION=	2
-
-COMMENT=	Lightweight gecko-based web browser built with GTK1
+COMMENT=	Lightweight gecko-based web browser built with GTK+-1.x
 
 .include "../../www/firefox/Makefile-firefox.common"
 .include "../../mk/bsd.pkg.mk"
