--- a/www/firefox/Makefile-firefox.common
+++ b/www/firefox/Makefile-firefox.common
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile-firefox.common,v 1.20 2005/07/20 23:33:30 taya Exp $
+# $NetBSD: Makefile-firefox.common,v 1.21 2005/09/17 02:35:19 jlam Exp $
 
 MOZILLA_BIN=	firefox-bin
-MOZ_VER=	1.0.6
+MOZ_VER=	1.0.7
 EXTRACT_SUFX=	.tar.bz2
 
 DISTNAME=	firefox-${MOZ_VER}-source
