--- a/editors/abiword/Makefile.common
+++ b/editors/abiword/Makefile.common
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile.common,v 1.23 2005/07/28 15:22:07 adam Exp $
+# $NetBSD: Makefile.common,v 1.24 2005/08/10 20:56:16 jlam Exp $
 
 # Be sure to update PLIST and distinfo for editors/abiword-plugins when updating
-ABIWORD_VERSION=	2.2.9
+ABIWORD_VERSION=	2.2.10
 DISTNAME=	abiword-${ABIWORD_VERSION}
 
 CATEGORIES=	editors
