--- a/www/curl/Makefile
+++ b/www/curl/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.55 2005/06/12 13:43:36 jmmv Exp $
+# $NetBSD: Makefile,v 1.56 2005/09/02 08:13:29 adam Exp $
 
-DISTNAME=	curl-7.14.1
+DISTNAME=	curl-7.15.0
 CATEGORIES=	www
 MASTER_SITES=	http://curl.haxx.se/download/ \
 		ftp://ftp.sunet.se/pub/www/utilities/curl/ \
