--- a/graphics/xli/Makefile
+++ b/graphics/xli/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.29 2005/04/11 21:46:10 tv Exp $
+# $NetBSD: Makefile,v 1.30 2005/10/10 19:54:13 reed Exp $
 
 DISTNAME=	xli-2005-02-27
 PKGNAME=	xli-1.17.0
-PKGREVISION=	4
+PKGREVISION=	5
 CATEGORIES=	graphics x11
 MASTER_SITES=	http://pantransit.reptiles.org/prog/xli/
 
