--- a/lang/python21-pth/Makefile
+++ b/lang/python21-pth/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.15 2005/01/23 20:41:46 recht Exp $
+# $NetBSD: Makefile,v 1.16 2005/04/11 21:46:15 tv Exp $
 #
 
 DISTNAME=	Python-2.1.3
 PKGNAME=	python21-pth-2.1.3
-PKGREVISION=	6
+PKGREVISION=	7
 CATEGORIES=	lang python
 MASTER_SITES=	# empty
 DISTFILES=	# empty
