--- a/net/skype/Makefile
+++ b/net/skype/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.8 2005/06/01 18:03:08 jlam Exp $
+# $NetBSD: Makefile,v 1.9 2005/08/04 13:27:18 xtraeme Exp $
 #
 
-DISTNAME=		skype_staticQT-1.2.0.11
+DISTNAME=		skype_staticQT-1.2.0.18
 PKGNAME=		${DISTNAME:S/_staticQT//}
 CATEGORIES=		net
 MASTER_SITES=		http://download.skype.com/linux/
