--- a/biology/rasmol/Makefile
+++ b/biology/rasmol/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.27 2006/02/05 23:08:20 joerg Exp $
+# $NetBSD: Makefile,v 1.28 2006/03/04 21:29:01 jlam Exp $
 
 DISTNAME=	RasMol_2.7.3
 PKGNAME=	rasmol-2.7.3
@@ -54,4 +54,7 @@ post-install:
 			${PREFIX}/share/examples/rasmol;		\
 	done
 
+.include "../../x11/libXext/buildlink3.mk"
+.include "../../x11/libXi/buildlink3.mk"
+.include "../../x11/xextproto/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
