--- a/mail/fetchmail/Makefile
+++ b/mail/fetchmail/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.157 2006/02/05 23:09:55 joerg Exp $
+# $NetBSD: Makefile,v 1.158 2006/04/13 18:23:34 jlam Exp $
 
-DISTNAME=	fetchmail-6.2.5.5
-PKGREVISION=	1
+DISTNAME=	fetchmail-6.3.6
 CATEGORIES=	mail
 MASTER_SITES=	http://download.berlios.de/fetchmail/
+EXTRACT_SUFX=	.tar.bz2
 
 MAINTAINER=	frueauf@NetBSD.org
 HOMEPAGE=	http://fetchmail.berlios.de/
