--- a/x11/xorg-server/Makefile
+++ b/x11/xorg-server/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.48 2006/11/06 12:18:09 dsainty Exp $
+# $NetBSD: Makefile,v 1.49 2006/12/15 20:33:06 joerg Exp $
 
 DISTNAME=	${DISTFILES}
 PKGNAME=	xorg-server-${XORG_VER}
-PKGREVISION=	13
+PKGREVISION=	14
 CATEGORIES=	x11
 MASTER_SITES=	${MASTER_SITE_XORG}
 DISTFILES=	X11R${XORG_VER}-src1.tar.gz \
