--- a/devel/pango/Makefile
+++ b/devel/pango/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.95 2006/12/15 19:12:29 drochner Exp $
+# $NetBSD: Makefile,v 1.96 2007/01/03 22:25:22 wiz Exp $
 
-DISTNAME=		pango-1.14.9
-PKGREVISION=		1
+DISTNAME=		pango-1.14.10
 CATEGORIES=		devel fonts
 MASTER_SITES=		${MASTER_SITE_GNOME:=sources/pango/1.14/}
 EXTRACT_SUFX=		.tar.bz2
