--- a/mail/bogofilter/Makefile
+++ b/mail/bogofilter/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.34 2006/01/06 15:10:03 wiz Exp $
+# $NetBSD: Makefile,v 1.35 2006/03/04 21:29:57 jlam Exp $
 
-DISTNAME=	bogofilter-0.96.6
-PKGREVISION=	1
+DISTNAME=	bogofilter-1.0.3
 CATEGORIES=	mail
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=bogofilter/}
 EXTRACT_SUFX=	.tar.bz2
