--- a/textproc/p5-XML-RSS/Makefile
+++ b/textproc/p5-XML-RSS/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.15 2006/03/04 21:30:50 jlam Exp $
+# $NetBSD: Makefile,v 1.16 2006/07/19 22:44:36 wiz Exp $
 
-DISTNAME=	XML-RSS-1.10
+DISTNAME=	XML-RSS-1.22
 PKGNAME=	p5-${DISTNAME}
 SVR4_PKGNAME=	p5xrs
 CATEGORIES=	textproc perl5
@@ -12,6 +12,10 @@ COMMENT=	XML-RSS helps to create and update RSS files
 
 DEPENDS+=	p5-XML-Parser>=2.29:../../textproc/p5-XML-Parser
 DEPENDS+=	p5-Test-Manifest>=0.9:../../devel/p5-Test-Manifest
+DEPENDS+=	p5-DateTime-[0-9]*:../../time/p5-DateTime
+DEPENDS+=	p5-DateTime-Format-Mail-[0-9]*:../../time/p5-DateTime-Format-Mail
+DEPENDS+=	p5-DateTime-Format-W3CDTF-[0-9]*:../../time/p5-DateTime-Format-W3CDTF
+DEPENDS+=	p5-HTML-Parser-[0-9]*:../../www/p5-HTML-Parser
 
 PERL5_PACKLIST=		auto/XML/RSS/.packlist
 
