--- a/textproc/namazu2/Makefile
+++ b/textproc/namazu2/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.31 2006/07/19 19:14:39 jlam Exp $
+# $NetBSD: Makefile,v 1.32 2007/02/22 19:27:14 wiz Exp $
 
-DISTNAME=	namazu-2.0.16
+DISTNAME=	namazu-2.0.17
 CATEGORIES=	japanese textproc www
 MASTER_SITES=	http://www.namazu.org/stable/
 
@@ -22,10 +22,10 @@ USE_LANGUAGES=		c
 USE_LIBTOOL=		yes
 TEST_TARGET=		check
 
+BUILD_DEFS+=		PKG_SYSCONFBASE
 CONFIGURE_ARGS+=	--localstatedir=${DATADIR:Q} \
 			--libexecdir=${PREFIX}/libexec/cgi-bin \
 			--sysconfdir=${PKG_SYSCONFBASE:Q}
-
 DATADIR=		${PREFIX}/libdata
 EXAMPLESDIR=		${PREFIX}/share/examples/namazu
 EXAMPLES=		mknmzrc namazurc
