--- a/devel/pango/Makefile
+++ b/devel/pango/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.96 2007/01/03 22:25:22 wiz Exp $
+# $NetBSD: Makefile,v 1.97 2007/02/01 12:44:19 drochner Exp $
 
-DISTNAME=		pango-1.14.10
+DISTNAME=		pango-1.16.1
 CATEGORIES=		devel fonts
-MASTER_SITES=		${MASTER_SITE_GNOME:=sources/pango/1.14/}
+MASTER_SITES=		${MASTER_SITE_GNOME:=sources/pango/1.16/}
 EXTRACT_SUFX=		.tar.bz2
 
 MAINTAINER=		wiz@NetBSD.org
