--- a/graphics/inkscape/Makefile
+++ b/graphics/inkscape/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.30 2007/02/05 20:20:03 adam Exp $
+# $NetBSD: Makefile,v 1.31 2007/02/15 10:43:55 rillig Exp $
 
-DISTNAME=	inkscape-0.45
-PKGREVISION=	1
+DISTNAME=	inkscape-0.45.1
 CATEGORIES=	graphics
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=inkscape/}
 
