--- a/graphics/freetype2/Makefile
+++ b/graphics/freetype2/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.56 2007/03/20 15:20:33 drochner Exp $
+# $NetBSD: Makefile,v 1.57 2007/03/24 12:49:08 drochner Exp $
 
 DISTNAME=	freetype-2.3.2
+PKGREVISION=	1
 PKGNAME=	${DISTNAME:S/-/2-/}
 CATEGORIES=	graphics
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=freetype/} \
