--- a/x11/qt4-libs/Makefile
+++ b/x11/qt4-libs/Makefile
@@ -1,8 +1,9 @@
-# $NetBSD: Makefile,v 1.7 2007/01/15 19:16:36 joerg Exp $
+# $NetBSD: Makefile,v 1.8 2007/03/18 17:34:41 adam Exp $
 
 .include "../../x11/qt4-libs/Makefile.common"
 
 PKGNAME=	qt4-libs-${QTVERSION}
+PKGREVISION=	1
 COMMENT=	C++ X GUI toolkit
 
 BUILD_TARGET=		sub-src
